# fasttrade

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: CMakeLists.txt  backtesting.cpp  basic_trading.cpp  high_frequency_trading.cpp  market_data_example.cpp  order_book_demo.cpp  portfolio_management.cpp  run_all_tests.cpp  test_binance_connector.cpp  test_bybit_connector.cpp  test_okx_connector.cpp
include/fasttrade/: fasttrade.hpp
include/fasttrade/core/: clock.hpp  limit_order.hpp  market_data_manager.hpp  order_book.hpp  trading_core.hpp  websocket_connection.hpp
include/fasttrade/utils/: decimal.hpp
src/: fasttrade.cpp
src/core/: clock.cpp  limit_order.cpp  market_data_manager.cpp  order_book.cpp  trading_core.cpp  websocket_connection.cpp
src/utils/: decimal.cpp
